# intent-routed-agent-advanced

./: .env.example  .gitignore  ALL_TOOLS_REGISTRY.py  ARCHITECTURE.md  Dockerfile  README.md  check_db_tools.py  langgraph.json  main.py  pyproject.toml  requirements.txt  reset_database.bat  sample_prompts.md  setup_venvs.bat  start_backend.bat  start_both.bat  start_frontend.bat  start_langgraph_studio.bat
app/agents/: aggregator.py  answer.py  context_enhancer.py  coordinator.py  evaluation.py  executor.py  intent.py  planner.py  quality_assurance.py  reasoning.py  response_formatter.py  tool_first_answer_agent.py
app/api/: app.py  routes.py
app/core/: cache.py  circuit_breaker.py  config.py  errors.py  guardrails.py  logging.py  metrics.py  request_context.py  session_logger.py  telemetry.py
app/database/: connection_manager.py  sql_generator.py  sql_templates.py  sql_validator.py
app/graph/: workflow.py
app/language/: llm_detector.py  processor.py
app/mcp/: base.py  database_server.py  knowledge_server.py  language_server.py  observability_server.py  system_server.py  utility_server.py
app/memory/: comprehensive_tools.py  manager.py  tool_vector_store.py  vector_store.py
app/prompts/: __init__.py  schemas.py  system_prompts.py  task_prompts.py  templates.py
app/rag/: retriever.py
app/registry/: tool_registry.py
cli/: cli.py
docker/: .env.example  docker-compose.yml
docs/: demo.html
frontend/: .env.example  Dockerfile  app.py  config.py  requirements.txt
scripts/: cleanup_sessions.py  initialize_tool_vector_store.py  populate_tool_vector_store.py  run_langgraph_studio.py  setup.py  verify_installation.py
(+32 files in other folders)
